# rust_note

./: .gitignore  Cargo.toml  README.md
compiler/: Cargo.toml
compiler/src/: lib.rs  simple_lexer.rs
demo/cli_csv/: Cargo.toml
demo/cli_csv/src/: main.rs
ffi/: Cargo.toml  README.md  build.rs
ffi/c_fn/: Cargo.toml  build.rs
ffi/c_fn/src/: main.rs
ffi/c_lib/: Cargo.toml  build.rs
ffi/c_lib/src/: lib.rs  main.rs
ffi/src/: lib.rs  main.rs
hello_algo/: Cargo.toml
hello_algo/examples/: array.rs
notes/concurrent/: Cargo.toml
notes/concurrent/examples/: atomic_relaxed.rs  barrier.rs  box1.rs  cell.rs  channel.rs  condvar.rs  condvar_wait.rs  cow.rs  fence.rs  lazy_lock.rs  mutex.rs  once.rs  park.rs  park_blocking_queue.rs  rayon.rs  rayon_pool.rs  rw_lock.rs  rw_lock_starvation.rs  simple_api.rs  tokio.rs  tokio_block.rs  tokio_future_sleep.rs  tokio_join_set.rs  tokio_select.rs  tokio_sleep.rs  tokio_spawn_local.rs  yield_now.rs
notes/concurrent/thread/: Cargo.toml
notes/concurrent/thread/examples/: thread_join.rs
notes/constant/: Cargo.toml
notes/constant/examples/: default_field_by_const.rs
notes/deconstruction/: Cargo.toml
notes/deconstruction/examples/: base.rs
notes/iterator/examples/: by_ref.rs  copy_clone.rs  count.rs  enumerate.rs  filter_map.rs  flat.rs  fuse.rs  partition.rs  peekable.rs  scan_fold.rs  scan_fold_reduce.rs  simple.rs  skip.rs  step_by.rs  take.rs  try.rs  zip.rs
notes/iterators/functions/: Cargo.toml
notes/iterators/functions/examples/: chain.rs  last.rs  next.rs  nth.rs  zip.rs
notes/ownership/examples/: auto_deref.rs  hrtb_fn.rs  hrtb_trait.rs  precise_capturing_generic.rs  precise_capturing_overcapture.rs
notes/ownership/hrtb/: Cargo.toml  hrtb.md
notes/ownership/hrtb/examples/: hrtb_fn.rs
notes/ownership/hrtb/src/: main.rs
notes/ownership/precise_capturing/: Cargo.toml  precise_capturing.md
notes/ownership/precise_capturing/examples/: generic.rs  overcapture.rs
notes/panic/examples/: catch_wind.rs  set_hook.rs
rust_by_example/: Cargo.toml
rust_by_example/examples/conversion/: conversion.rs
rust_by_example/examples/custom_types/: constants.rs  enums.rs  structures.rs
rust_by_example/examples/expression/: expression.rs
rust_by_example/examples/flow_control/: for.rs  if_else.rs  if_let.rs  let_else.rs  loop.rs  match.rs  match_binding.rs  match_destructuring.rs  match_guard.rs  while.rs  while_let.rs
rust_by_example/examples/functions/: closures.rs  closures_capture.rs  closures_input_functions.rs  closures_input_parameters.rs  closures_iter_find.rs  closures_output_parameters.rs  closures_type_anonymity.rs  diverging.rs  fn.rs  hof.rs  methods.rs
rust_by_example/examples/generics/: associated_type.rs  bounds.rs  functions.rs  generics.rs  impl.rs  multi_bounds.rs  new_types.rs  phantom.rs  traits.rs  where.rs
rust_by_example/examples/hello_world/: comment.rs  print.rs  print_debug.rs  print_display.rs
rust_by_example/examples/modules/: file_hierarchy.rs  super_self.rs  use.rs  visibility.rs  visibility_struct.rs
rust_by_example/examples/primitives/: arrays_and_slices.rs  literals.rs  primitives.rs  tuples.rs
rust_by_example/examples/scope/: borrow.rs  borrow_alias.rs  borrow_mut.rs  borrow_ref.rs  lifetime_bounds.rs  lifetime_coercion.rs  lifetime_explicit.rs  lifetime_fn.rs  lifetime_static.rs  move.rs  move_mut.rs  move_partial.rs  raii.rs
rust_by_example/examples/types/: types.rs
rust_by_example/examples/variables/: variables.rs
too_many_lists/: Cargo.toml
too_many_lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  second.rs  stacked_borrows.rs  third.rs
zero_to_prod/actix_web/: Cargo.toml  README.md
zero_to_prod/actix_web/scripts/: init_db.sh
zero_to_prod/actix_web/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero_to_prod/actix_web/src/routes/: subscriptions.rs
zero_to_prod/actix_web/tests/: health_check.rs
