[package]
name = "rust_by_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[[example]]
name = "comment"
path = "examples/hello_world/comment.rs"

[[example]]
name = "print"
path = "examples/hello_world/print.rs"

[[example]]
name = "print_debug"
path = "examples/hello_world/print_debug.rs"

[[example]]
name = "print_display"
path = "examples/hello_world/print_display.rs"

[[example]]
name = "primitives"
path = "examples/primitives/primitives.rs"

[[example]]
name = "literals"
path = "examples/primitives/literals.rs"

[[example]]
name = "tuples"
path = "examples/primitives/tuples.rs"

[[example]]
name = "arrays_and_slices"
path = "examples/primitives/arrays_and_slices.rs"
