[package]
name = "rust_by_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[[example]]
name = "comment"
path = "examples/hello_world/comment.rs"

[[example]]
name = "print"
path = "examples/hello_world/print.rs"

[[example]]
name = "print_debug"
path = "examples/hello_world/print_debug.rs"

[[example]]
name = "print_display"
path = "examples/hello_world/print_display.rs"

[[example]]
name = "primitives"
path = "examples/primitives/primitives.rs"

[[example]]
name = "literals"
path = "examples/primitives/literals.rs"

[[example]]
name = "tuples"
path = "examples/primitives/tuples.rs"

[[example]]
name = "arrays_and_slices"
path = "examples/primitives/arrays_and_slices.rs"

[[example]]
name = "structures"
path = "examples/custom_types/structures.rs"

[[example]]
name = "enums"
path = "examples/custom_types/enums.rs"

[[example]]
name = "constants"
path = "examples/custom_types/constants.rs"

[[example]]
name = "variables"
path = "examples/variables/variables.rs"

[[example]]
name = "types"
path = "examples/types/types.rs"

[[example]]
name = "conversion"
path = "examples/conversion/conversion.rs"

[[example]]
name = "expression"
path = "examples/expression/expression.rs"

[[example]]
name = "if_else"
path = "examples/flow_control/if_else.rs"

[[example]]
name = "loop"
path = "examples/flow_control/loop.rs"

[[example]]
name = "while"
path = "examples/flow_control/while.rs"

[[example]]
name = "for"
path = "examples/flow_control/for.rs"

[[example]]
name = "match"
path = "examples/flow_control/match.rs"

[[example]]
name = "match_destructuring"
path = "examples/flow_control/match_destructuring.rs"

[[example]]
name = "match_guard"
path = "examples/flow_control/match_guard.rs"

[[example]]
name = "match_binding"
path = "examples/flow_control/match_binding.rs"

[[example]]
name = "if_let"
path = "examples/flow_control/if_let.rs"

[[example]]
name = "let_else"
path = "examples/flow_control/let_else.rs"

[[example]]
name = "while_let"
path = "examples/flow_control/while_let.rs"

[[example]]
name = "fn"
path = "examples/functions/fn.rs"

[[example]]
name = "methods"
path = "examples/functions/methods.rs"

[[example]]
name = "closures"
path = "examples/functions/closures.rs"

[[example]]
name = "closures_capture"
path = "examples/functions/closures_capture.rs"

[[example]]
name = "closures_input_parameters"
path = "examples/functions/closures_input_parameters.rs"

[[example]]
name = "closures_type_anonymity"
path = "examples/functions/closures_type_anonymity.rs"

[[example]]
name = "closures_input_functions"
path = "examples/functions/closures_input_functions.rs"

[[example]]
name = "closures_output_parameters"
path = "examples/functions/closures_output_parameters.rs"

[[example]]
name = "closures_iter_find"
path = "examples/functions/closures_iter_find.rs"

[[example]]
name = "hof"
path = "examples/functions/hof.rs"

[[example]]
name = "diverging"
path = "examples/functions/diverging.rs"

[[example]]
name = "visibility"
path = "examples/modules/visibility.rs"

[[example]]
name = "visibility_struct"
path = "examples/modules/visibility_struct.rs"

[[example]]
name = "use"
path = "examples/modules/use.rs"

[[example]]
name = "super_self"
path = "examples/modules/super_self.rs"

[[example]]
name = "file_hierarchy"
path = "examples/modules/file_hierarchy.rs"

[[example]]
name = "generics"
path = "examples/generics/generics.rs"

[[example]]
name = "generics_functions"
path = "examples/generics/functions.rs"

[[example]]
name = "generics_impl"
path = "examples/generics/impl.rs"

[[example]]
name = "generics_traits"
path = "examples/generics/traits.rs"

[[example]]
name = "generics_bounds"
path = "examples/generics/bounds.rs"

[[example]]
name = "generics_multi_bounds"
path = "examples/generics/multi_bounds.rs"

[[example]]
name = "generics_where"
path = "examples/generics/where.rs"

[[example]]
name = "generics_new_types"
path = "examples/generics/new_types.rs"

[[example]]
name = "generics_associated_type"
path = "examples/generics/associated_type.rs"

[[example]]
name = "generics_phantom"
path = "examples/generics/phantom.rs"

[[example]]
name = "scope_raii"
path = "examples/scope/raii.rs"

[[example]]
name = "scope_move"
path = "examples/scope/move.rs"

[[example]]
name = "scope_move_mut"
path = "examples/scope/move_mut.rs"

[[example]]
name = "scope_move_partial"
path = "examples/scope/move_partial.rs"

[[example]]
name = "scope_borrow"
path = "examples/scope/borrow.rs"

[[example]]
name = "scope_borrow_mut"
path = "examples/scope/borrow_mut.rs"

[[example]]
name = "scope_borrow_alias"
path = "examples/scope/borrow_alias.rs"

[[example]]
name = "scope_borrow_ref"
path = "examples/scope/borrow_ref.rs"

[[example]]
name = "scope_lifetime_explicit"
path = "examples/scope/lifetime_explicit.rs"

[[example]]
name = "scope_lifetime_fn"
path = "examples/scope/lifetime_fn.rs"

[[example]]
name = "scope_lifetime_bounds"
path = "examples/scope/lifetime_bounds.rs"

[[example]]
name = "scope_lifetime_coercion"
path = "examples/scope/lifetime_coercion.rs"

[[example]]
name = "scope_lifetime_static"
path = "examples/scope/lifetime_static.rs"